tests/fail/elaboration/unsolved/fun-literal-param-type.snap
stdout = '''
fun (a : ?0) => a : ?0 -> ?0
'''
stderr = '''
error: failed to infer named pattern type
  ┌─ tests/fail/elaboration/unsolved/fun-literal-param-type.fathom:3:5
  │
3 │ fun a => a
  │     ^ unsolved named pattern type

'''
